Linked Events data funnel part 1
